@@ -6,21 +6,34 @@ Title: Continuous Optimization using Memetic Algorithms with Local
 LinkingTo: Rcpp
 Type: Package
 LazyLoad: yes
-Author: Christoph Bergmeir, Daniel Molina, José M. Benítez
+Authors@R: c(
+  person("Christoph", "Bergmeir", email = "c.bergmeir@decsai.ugr.es", role = c("aut", "cre", "cph")),
+  person("José M.", "Benítez", role = c("ths")),
+  person("Daniel", "Molina", role = c("aut", "cph")),
+  person("Robert", "Davies", role = c("ctb", "cph"), comment= "Developer of the matrix library newmat which partly ships with this package"),
+  person("Dirk", "Eddelbuettel", role = c("ctb", "cph"), comment= "Developer of RcppDE from which code was used in evaluate.h"),
+  person("Nikolaus", "Hansen", role = c("ctb", "cph"), comment= "Author of the original cmaes implementation that ships with the package"))
 Description: An implementation of an algorithm family for continuous
     optimization called memetic algorithms with local search chains
     (MA-LS-Chains). Memetic algorithms are hybridizations of genetic
     algorithms with local search methods. They are especially suited
     for continuous optimization.
-Version: 0.2-3
-URL: http://sci2s.ugr.es/dicits/software/Rmalschains
-Date: 2016-11-29
+Version: 0.2-4
 Depends: Rcpp (>= 0.9.10)
 Suggests: inline
 Encoding: UTF-8
 Collate: 'malschains.R' 'Rmalschains-package.R'
 RoxygenNote: 5.0.1
 NeedsCompilation: yes
-Packaged: 2016-11-29 04:14:21 UTC; bergmeir
+Packaged: 2018-04-29 02:01:00 UTC; bergmeir
+Author: Christoph Bergmeir [aut, cre, cph],
+  José M. Benítez [ths],
+  Daniel Molina [aut, cph],
+  Robert Davies [ctb, cph] (Developer of the matrix library newmat which
+    partly ships with this package),
+  Dirk Eddelbuettel [ctb, cph] (Developer of RcppDE from which code was
+    used in evaluate.h),
+  Nikolaus Hansen [ctb, cph] (Author of the original cmaes implementation
+    that ships with the package)
 Repository: CRAN
-Date/Publication: 2016-11-29 08:09:54
+Date/Publication: 2018-04-29 03:41:40 UTC
