@@ -491,7 +491,8 @@ MatrixInput::~MatrixInput()
 {
    REPORT
    Tracer et("MatrixInput");
-   if (n!=0) Throw(ProgramException("A list of values was too short"));
+   //20180426 get rid of warning: throw will always call terminate() [-Wterminate] 
+   //if (n!=0) Throw(ProgramException("A list of values was too short"));
 }
 
 MatrixInput BandMatrix::operator<<(double)
